// DONE
Table "productos" {
  "id" uuid [pk, not null]
  "nombre" text [unique, not null]
  "familia" text [not null]
  "iva" numeric [not null]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
}

// DONE
Table "productos_en_tienda" {
  "id" uuid [pk, not null]
  "precio_compra" numeric [not null]
  "precio_venta" numeric [not null]
  "cantidad" int4 [not null]
  "alta" bool [not null, default: true]
  "producto_id" uuid [not null, ref: > productos.id]
  "tienda_id" uuid [not null, ref: > tiendas.id]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]

  indexes {
    (producto_id, tienda_id) [unique]
  }
}

// DONE
Table "codigos_barras" {
  "codigo" text [not null]
  "producto_id" uuid [not null, ref: > productos.id]
  "cantidad" int4 [not null]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]

  indexes {
    (codigo, producto_id) [pk]
  }
}

// DONE
Table "ofertas" {
  "id" uuid [pk, not null]
  "nombre" text [not null]
  "descripcion" text
  "cantidad_para_oferta" int4 [not null]
  "precio_oferta" numeric [not null]
  "fecha_inicio" date [not null]
  "fecha_fin" date 
  "producto_tienda_id" uuid [not null, ref: > productos_en_tienda.id]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
}

// DONE
Table "tiendas" {
  "id" uuid [pk, not null]
  "nombre" text [unique, not null]
  "empresa_id" uuid [not null, ref: > empresas.id]
  "direccion_id" uuid [unique, ref: > direcciones.id]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
}

// DONE
Table "productos_ventas" {
  "id" uuid [pk, not null]
  "producto_tienda_id" uuid [not null, ref: > productos_en_tienda.id]
  "venta_id" uuid [not null, ref: > ventas.id]
  "cantidad_vendida" int4 [not null]
  "iva" numeric [not null]
  "precio_compra" numeric [not null]
  "precio_venta" numeric [not null]
  "descuento" numeric [not null, default: 0]

  indexes {
    (producto_tienda_id, venta_id) [unique]
  }
}

// DONE
Table "productos_devoluciones" {
  "id" uuid [pk, not null]
  "producto_venta_id" uuid [not null, ref: > productos_ventas.id]
  "devolucion_id" uuid [not null, ref: > devoluciones.id]
  "cantidad_producto_devuelto" int4 [not null, note: "Indica la cantidad de veces que se ha devuelto el producto para esa venta"]
  "motivo" text [not null, note: "Indica el motivo de la devolución", default: 'No especificado']

  indexes {
    (producto_venta_id, devolucion_id) [unique]
  }
}

// DONE
Table "devoluciones" {
  "id" uuid [pk, not null]
  "empleados_id" uuid [not null, ref: > empleados.id]
  "clientes_id" uuid [not null, ref: > clientes.id]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
}

Table "ofertas_devueltas" {
  "id" uuid [pk, not null]
  "oferta_venta_id" uuid [not null, ref: > ofertas_ventas.id]
  "devolucion_id" uuid [not null, ref: > devoluciones.id]
  "cantidad_ofertas_devueltas" int4 [not null, note: "Indica la cantidad de veces que se ha devuelto la oferta para esa venta"]
  "motivo" text [not null, note: "Indica el motivo de la devolución", default: 'No especificado']

  indexes {
    (oferta_venta_id, devolucion_id) [unique]
  }
}

// DONE
Table "ofertas_ventas" {
  "id" uuid [pk, not null]
  "producto_en_tienda_id" uuid [not null, ref: > productos_en_tienda.id]
  "venta_id" uuid [not null, ref: > ventas.id]
  "oferta_id" uuid [not null, ref: > ofertas.id]
  "cantidad_de_ofertas_aplicadas" int4 [not null, note: "Indica la cantidad de veces que se ha aplicado la oferta"]
  "cantidad_producto_por_oferta" int4 [not null, note: "Indica la cantidad de productos que se deben comprar para aplicar la oferta"]
  "precio_por_oferta" numeric [not null, note: "Indica el precio de una oferta aplicada"]
  "iva" numeric [not null, note: "IVA del producto en el momento de la venta"]
  "precio_compra" numeric [not null, note: "Precio de compra del producto en el momento de la venta"]
  "precio_venta" numeric [not null, note: "Precio de venta del producto en el momento de la venta"]
  "fecha_inicio" date [not null]
  "fecha_fin" date 

  indexes {
    (producto_en_tienda_id, venta_id, oferta_id) [unique]
  }
}

// DONE
Table "ventas" {
  "id" uuid [pk, not null]
  "numero_factura" text [unique, not null]
  "empleados_id" uuid [not null, ref: > empleados.id]
  "clientes_id" uuid [not null, ref: > clientes.id]
  "pagado_efectivo" numeric [not null]
  "pagado_tarjeta" numeric [not null]
  "cierre_id" uuid [not null, ref: > cierres.id]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
}

// DONE
Table "productos_mermas" {
  "merma_id" uuid [not null, ref: > mermas.id]
  "producto_tienda_id" uuid [not null, ref: > productos_en_tienda.id]
  "iva" numeric [not null]
  "precio_compra" numeric [not null]
  "precio_venta" numeric [not null]
  "cantidad" int4 [not null]
  "motivo" text [not null]

  indexes {
    (merma_id, producto_tienda_id) [pk]
  }
}

// DONE
Table "mermas" {
  "id" uuid [pk, not null]
  "empleados_id" uuid [not null, ref: > empleados.id]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
}

// DONE
Table "proveedores" {
  "id" uuid [pk, not null]
  "nombre" text [not null]
  "nif" text [unique, not null]
  "email_id" uuid [unique]
  "telefono_id" uuid [unique]
  "direccion_id" uuid
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
}

// DONE
// La tienda a la que va el producto es la tienda del pedido --> Hacer un trigger para que cuando se cree un pedido 
// se cree un producto_pedido para cada producto de ese pedido y actualice productos_en_tienda
Table "productos_pedidos" {
  "producto_id" uuid [not null]
  "pedido_id" uuid [not null]
  "precio_compra" numeric [not null]
  "cantidad_pedida" int4 [not null]
  "cantidad_recibida" int4 [not null]

  indexes {
    (producto_id, pedido_id) [pk]
  }
}

// DONE
Table "pedidos" {
  "id" uuid [pk, not null]
  "numero_factura" text [unique, not null]
  "fecha_pedido" date [not null, not null]
  "fecha_entrega" date [not null]
  "estado" text [not null]
  "observaciones" text
  "proveedor_id" uuid [not null]
  "tienda_id" uuid [not null]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
}

// DONE
Table "clientes" {
  "id" uuid [pk, not null]
  "nombre" text [not null]
  "apellidos" text [not null]
  "nif" text [unique, not null]
  "direccion_id" uuid [unique]
  "email_id" uuid [unique]
  "telefono_id" uuid [unique]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
}

// DONE
Table "direcciones" {
  "id" uuid [pk, not null]
  "calle" text [not null]
  "numero" text [not null]
  "piso" text
  "puerta" text
  "codigo_postal" text [not null]
  "ciudad" text [not null]
  "provincia" text [not null]
  "pais" text [not null]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
}

// DONE
Table "emails" {
  "id" uuid [pk, not null]
  "email" text [not null]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
}

// DONE
Table "telefonos" {
  "id" uuid [pk, not null]
  "prefijo" text [not null]
  "telefono" text [not null]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
}

// DONE
Table "empleados" {
  "id" uuid [pk, not null]
  "username" text [unique, not null]
  "nombre" text [not null]
  "apellidos" text [not null]
  "nif" text [unique, not null]
  "rol" text [not null]
  "descripcion" text
  "fecha_nacimiento" date [not null]
  "fecha_contratacion" date [not null]
  "fecha_baja" date 
  "email_id" uuid [unique, not null]
  "telefono_id" uuid [unique]
  "direccion_id" uuid
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
}

// DONE
Table "cierres" {
  "id" uuid [pk, not null]
  "dinero_inicial" numeric [not null]
  "dinero_real" numeric [not null]
  "dinero_retirado" numeric [not null]
  "dinero_dejado_en_caja" numeric [not null]
  "fecha_apertura" date [not null]
  "fecha_cierre" date [not null]
  "en_uso" bool [not null]
  "caja_id" uuid [not null, ref: > cajas.id]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
}

// DONE
Table "cajas" {
  "id" uuid [pk, not null]
  "nombre" text [unique, not null]
  "tienda_id" uuid [not null]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
}

// DONE
Table "productos_inventarios" {
  "producto_tienda_id" uuid [not null, ref: > productos_en_tienda.id]
  "inventario_id" uuid [not null, ref: > inventario.id]
  "cantidad_teorica" int4 [not null]
  "cantidad_real" int4 [not null]
  "empleado_id" uuid [not null, ref: > empleados.id]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]

  indexes {
    (producto_tienda_id, inventario_id) [pk]
  }
}

// DONE
Table "inventario" {
  "id" uuid [pk, not null]
  "descripcion" text [not null]
  "inventario_cerrado" bool [not null, default: false]
  "fecha_inicio" date [not null]
  "fecha_fin" date
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
}

// DONE
Table "empresas" {
  "id" uuid [pk, not null]
  "nombre" text [unique, not null]
  "nif" text [unique, not null]
  "ceo_id" uuid [not null, ref: > empleados.id]
  "fecha_creacion" date [not null]
  "razon_social" text [not null]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
}

// DONE
Table "tiendas_empleados" {
  "tienda_id" uuid [not null, ref: > tiendas.id]
  "empleado_id" uuid [not null, ref: > empleados.id]

  indexes {
    (tienda_id, empleado_id) [unique]
  }
}